played with a fixed bottom nav, didnt like it. fixed footer to align icon and text

--- a/src/components/Products/Product.css
+++ b/src/components/Products/Product.css
@@ -49,3 +49,8 @@
     opacity: 1;
     border: 3px solid green
 }
+
+.product-image-thumbnail-detail img:focus {
+    opacity: 1;
+    border: 3px solid red
+}
